Preprocessor initial dir(for changes) and Makefile minor changes.

--- a/preprocessor/Makefile
+++ b/preprocessor/Makefile
@@ -12,8 +12,9 @@ all: release
 release:
 		cp PCB_enhancer.py PCB_enhancer_release.py && \
 		sed -i "s/\(initial_directory.*=.*'\).*\('\)/\1~\/\2/" PCB_enhancer_release.py && \
-		sed -i "s/\(file_name_mill.*=.*'\).*\('\)/\1\2/" PCB_enhancer_release.py && \
-		sed -i "s/\(file_name_drill.*=.*'\).*\('\)/\1\2/" PCB_enhancer_release.py && \
-		sed -i "s/\(file_name_outline =.*'\).*\('\)/\1\2/" PCB_enhancer_release.py && \
+#		sed -i "s/\(file_name_mill.*=.*'\).*\('\)/\1\2'/" PCB_enhancer_release.py && \
+#		sed -i "s/\(file_name_mill.*= \).*/\1''/" PCB_enhancer_release.py && \
+		sed -i "0,/file_name_mill/{s/\(file_name_mill.*= \).*/\1''/}" PCB_enhancer_release.py && \
+		sed -i "0,/file_name_drill/{s/\(file_name_drill.*= \).*/\1''/}" PCB_enhancer_release.py && \
+		sed -i "0,/file_name_outline/{s/\(file_name_outline.*= \).*/\1''/}" PCB_enhancer_release.py && \
 		sed -i "s/\(.*line = \";PCB_enhancer(\).*\().*\)/\1$(GIT_VERSION)\2/" PCB_enhancer_release.py 
-#		sed -i "s/.*line = \";PCB_enhancer\(.*\)/line = \";PCB_enhancer\($(GIT_VERSION)\)\\\n\"/" PCB_enhancer_release.py 
